fungsi MBA sudah bisa dijalankan

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -4,3 +4,6 @@ backgroundColor="#F1F5FB"
 secondaryBackgroundColor="#FFFFFF"
 textColor="#252733"
 font="sans serif"
+
+[global]
+dataFrameSerialization = "legacy"
