--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit==1.9.0
-streamlit-option-menu==0.3.2
-pandas==1.3.4
-streamlit-aggrid==0.2.3.post2
-plotly-express==0.4.1
-pyeclat==1.0.2
 mlxtend==0.19.0
+pandas==1.3.4
+plotly==5.8.0
+plotly-express==0.4.1
+pyECLAT==1.0.2
+streamlit==1.9.0
+streamlit_option_menu==0.3.2
+streamlit-aggrid==0.2.3.post2
